exports[`Accounts Duck buildAccount builds an account with a name 1`] = `
Object {
  "auth": Object {
    "login": "testlogin",
    "password": "testpassword",
  },
  "name": "Account Name",
  "type": "io.cozy.accounts",
}
`;

exports[`Accounts Duck buildAccount builds an account without name 1`] = `
Object {
  "auth": Object {
    "login": "testlogin",
    "password": "testpassword",
  },
  "type": "io.cozy.accounts",
}
`;
